Fix auto-wrap for long, unbreakable text
These new CSS rules apply @syncguru's original solution [1] in a more 
selective way. The main problem with the initial approach was its 
application to the whole table.

As CSS tables are divided in two main parts (header <thead> and body 
<tbody>), we can restrict the rule to <tbody>, which ensures that the
the header's behavior is not affected.

Fixes #27114, PR https://github.com/mantisbt/mantisbt/pull/1761

[1]: see PR https://github.com/mantisbt/mantisbt/pull/1690, 
     reverted in 60d28cce0569d2acd1daccce930e5215a1abda72

--- a/css/ace-mantis.css
+++ b/css/ace-mantis.css
@@ -175,6 +175,23 @@ table {
     background-color: #ffffff !important;
 }
 
+/* Breaking lines when needed */
+[class*="description"],
+[class*="steps-to-reproduce"],
+[class*="additional-information"],
+[class*="bugnote"],
+[class*="custom-field"] {
+    overflow-wrap: anywhere;
+}
+
+pre {
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+
 /* Disable printing of link urls */
 a:link:after, a:visited:after {
     content: normal !important;
